# FertYieldExplorer

./: .gitignore  README.md  main.py  pyproject.toml  res-rc.qrc
logic/: anova.py  charts.py
mnt/data/: origin_data.csv  sample_data.csv  trash_data.csv
ui/: main.ui  main_ui.py  res_rc.py  res_rc.qrc  ui_main.py
views/: analysis_view.py  charts_view.py  data_view.py  home_view.py
