[tool.poetry]
name = "fertyieldexplorer"
version = "0.1.0"
description = ""
authors = ["sshyta <sshyta@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyqt6 = "^6.9.0"
matplotlib = "^3.10.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
